Completed missing Unit tests on DoNot Sends and Service User AssignedEmployees

--- a/app/Resources/views/donotsend/edit.html.twig
+++ b/app/Resources/views/donotsend/edit.html.twig
@@ -14,7 +14,7 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input class="button-red" type="submit" value="Remove Do Not Send Flag">
+            <input class="button-red" type="submit" value="Remove Do Not Send Flag" role="button">
             {{ form_end(delete_form) }}
         </li>
     </ul>
