--- a/app/Resources/views/employee/show.html.twig
+++ b/app/Resources/views/employee/show.html.twig
@@ -16,7 +16,7 @@
                 </li>
                 <li>
                     {{ form_start(delete_form) }}
-                    <input type="submit" value="Delete Employee" class="button-red">
+                    <input type="submit" value="Delete Employee" class="button-red" role="button">
                     {{ form_end(delete_form) }}
                 </li>
             </ul>
