--- a/app/Resources/views/roster/edit.html.twig
+++ b/app/Resources/views/roster/edit.html.twig
@@ -15,7 +15,7 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input class="button-red" type="submit" value="Delete This Roster">
+            <input class="button-red" type="submit" value="Delete This Roster" role="button">
             {{ form_end(delete_form) }}
         </li>
     </ul>
