--- a/app/Resources/views/roster/index.html.twig
+++ b/app/Resources/views/roster/index.html.twig
@@ -1,18 +1,24 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Rosters list</h1>
+    <div class="divide-nav">
     <ul>
         <li>
-            <a class="button-green" href="{{ path('roster_new') }}" class="btn btn-success btn-sm" role="button">Create
+            <a class="button-green" href="{{ path('roster_new') }}">Create
                 a new roster</a>
         </li>
     </ul>
+    </div>
+    <hr>
+    <h2>Rosters list</h2>
+
     <table>
         <thead>
         <tr>
             <th></th>
             <th>Serviceuserid</th>
+            <th>Start Time</th>
+            <th>End Time</th>
             <th>Status</th>
             <th>Resources needed</th>
             <th>Customer</th>
@@ -33,6 +39,8 @@
                 </td>
 
                 <td>{{ roster.serviceUserId }}</td>
+                <td>{% if roster.rosterStartTime %}{{ roster.rosterStartTime|date('D d-m-y H:i:s') }}{% endif %}</td>
+                <td>{% if roster.rosterEndTime %}{{ roster.rosterEndTime|date('D d-m-y H:i:s') }}{% endif %}</td>
 
                 <td>{{ roster.rosterStatus }}</td>
                 <td>{{ roster.numberResourcesNeeded }}</td>
