--- a/app/Resources/views/_base.html.twig
+++ b/app/Resources/views/_base.html.twig
@@ -54,13 +54,12 @@
     {% endblock %}
 </head>
 <body>
+<div class="navbar navbar-default navbar-fixed-top">
 
-<div class="topnav">
-
-    <a href="{{ path('office_index') }}">
+    <a href="{{ path('homepage') }}">
 
         <img src="/images/iwalogo2017.png" alt="IWA logo" width="120" height="45"></a>
-    <a href="{{ path('office_index') }}" class="btn btn-primary" role="button">Home</a>
+    <a href="{{ path('homepage') }}" class="btn btn-primary" role="button">Home</a>
 
     <a href="{{ path('roster_index') }}">
 
@@ -111,8 +110,8 @@
             <a href="{{ path('serviceuser_index') }}" class="btn btn-success" role="button">Login</a>
 
     {% endif %}
+    <span></span>
 </div>
-
 {% for flashMessage in app.session.flashbag.get('error') %}
     <div class="alert-danger" role="alert">
         <strong>{{ flashMessage }}</strong>
@@ -128,6 +127,7 @@
 
 {% block javascripts %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
 {% endblock %}
 </body>
 </html>
