Added in additional logic to handle deleting service users and employees to validate if there are cascaded relationships (do not sends, assigned employee, rosters) which need to be tidied up first.  Also updated routing between rosters and service user records based on user acceptance testing and tidied up roster new and roster show pages to be more intuitive to the user

--- a/app/Resources/views/employee/show.html.twig
+++ b/app/Resources/views/employee/show.html.twig
@@ -94,6 +94,44 @@
                 </tr>
                 </tbody>
             </table>
+            <h2>Do Not Send To these Service Users</h2>
+
+            <table align="center">
+
+                {% for doNotSend in doNotSends %}
+
+                    <tr>
+                        <td>
+                            {{ doNotSend.serviceUserId }}  </td>
+                        <td><a class="button-red" href="{{ path('donotsend_delete', { 'id': doNotSend.id }) }}"
+                            >Remove DoNotSend Flag</a>
+                        </td>
+
+                    </tr>
+
+                {% endfor %}
+
+            </table>
+            <h2>Assigned to these Service Users</h2>
+
+            <table align="center">
+
+                {% for assignedServiceUser in assignedServiceUsers %}
+
+                    <tr>
+                        <td>
+                            {{ assignedServiceUser.serviceUserId }}  </td>
+                        <td><a class="button-red"
+                               href="{{ path('serviceuserassignedemployee_delete', { 'id': assignedServiceUser.id }) }}"
+                            >Remove Assignment</a>
+                        </td>
+
+                    </tr>
+
+                {% endfor %}
+
+            </table>
+
         </section>
 
 
