--- a/app/Resources/views/roster/show.html.twig
+++ b/app/Resources/views/roster/show.html.twig
@@ -21,8 +21,10 @@
     <div class="column_container">
     <section class="flex">
         <section>
+            <a class="button-green"
+               href="{{ path('serviceuser_show', { 'id': roster.serviceUserId.id }) }}">Go to Service User record</a>
 
-    <table>
+            <table>
         <tbody>
         <tr>
             <th>Id</th>
