--- a/app/Resources/views/serviceuser/show.html.twig
+++ b/app/Resources/views/serviceuser/show.html.twig
@@ -106,7 +106,7 @@
             <table align="center">
                 <th>
                     <a class="button-green" href="{{ path('donotsend_new', { 'serviceUser': serviceUser.id }) }}"
-                    >Mark an Employee As Do Not Send</a>
+                    >Add Do Not Send</a>
 
                 </th>
                 <th></th>
@@ -117,7 +117,7 @@
                         <td>
                             {{ doNotSend.employeeId }}  </td>
                         <td><a class="button-red" href="{{ path('donotsend_delete', { 'id': doNotSend.id }) }}"
-                            >Remove DoNotSend Flag</a>
+                            >Remove DoNotSend</a>
                         </td>
 
                     </tr>
