Further tidy up of portal view for service user role, including validation to prevent a user logged in as service user role being able to update any roster records which are not associated with them.
Display employees and service users managed by a given office on the office show page if the user has sufficient rights

Implemented inheritance between ROLE_ADMIN which inherits all rights of ROLE_USER in security.yml

Annotated operational aspects of application (service users, employees, rosters etc.) to ROLE_USER and Admin aspects to ROLE_ADMIN
Applied new CSS styling to portal pages

--- a/app/Resources/views/office/index.html.twig
+++ b/app/Resources/views/office/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '_base.html.twig' %}
+{% extends '_baseportal.html.twig' %}
 
 {% block body %}
 
@@ -28,7 +28,7 @@
 
                         </li>
                         <li>
-                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                            {% if is_granted('ROLE_ADMIN') %}
 
                                 <a class="button-orange" href="{{ path('office_edit', { 'id': office.id }) }}">Edit</a>
                             {% endif %}
@@ -58,6 +58,6 @@
         <a href="{{ path('security_logout') }}">
             <a class="btn btn-default btn"> You are currently logged in as {{ app.user }}</a>
             <img src="/images/logout.png" alt="customer" height="32" width="32"></a>
-        <a class="button-grey" href="{{ path('security_logout') }}" class="btn btn-primary" role="button">Logout</a>
+        <a class="button-grey" href="{{ path('security_logout') }}">Logout</a>
     {% endif %}
 {% endblock %}
